[tool.poetry]
name = "class-6-hw-project"
version = "0.1.0"
description = ""
authors = ["Netzer-yech <netzer.yech@gmail.com>"]
readme = "README.md"
packages = [{include = "class"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
